--- a/安装.md
+++ b/安装.md
@@ -5,6 +5,11 @@
 
 [Node.js](https://nodejs.org/zh-cn/download/releases)
 
+```powershell
+curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash -
+sudo apt-get install -y nodejs
+```
+
 选择较低的版本，否则安装gitbook会报错
 
 #### 1.2 执行以下命令安装 GitBook：
@@ -12,14 +17,13 @@
 现在安装 Node.js 都会默认安装 npm（node 包管理工具），所以我们不用单独安装 npm，打开命令行，执行以下命令安装 GitBook：
 
 ```powershell
-npm install -g gitbook-cli
+sudo npm install -g gitbook-cli
 ```
 
 ubuntu安装npm：
 
 ```powershell
-curl -sL https://deb.nodesource.com/setup_9.x | sudo -E bash -
-sudo apt-get install -y nodejs
+sudo apt install npm
 ```
 
 #### 1.3 在指定文件夹安装gitbook
@@ -66,3 +70,15 @@ gitbook serve
 #### #1.5Error
 
 1.5.1[TypeError: cb.apply is not a function](https://blog.csdn.net/m0_58352566/article/details/123449682)
+
+找到文件polyfills.js，可以直接复制路径
+
+找到这个文件打开，找到
+
+```
+fs.stat = statFix(fs.stat)
+fs.fstat = statFix(fs.fstat)
+fs.lstat = statFix(fs.lstat)
+```
+
+删掉这三个函数即可。
